# RDGatewayRS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gateway.cer  rdg-gateway.toml  test_relay.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
crates/rdg-core/: Cargo.toml
crates/rdg-core/src/: acl.rs  auth.rs  config.rs  lib.rs  negotiate.rs  session.rs
crates/rdg-core/src/db/: mod.rs  models.rs  provider.rs  sqlite.rs
crates/rdg-proto/: Cargo.toml
crates/rdg-proto/src/: lib.rs  messages.rs  ntlm.rs  rpc.rs  rpch.rs  websocket.rs
crates/rdg-server/: Cargo.toml
crates/rdg-server/src/: main.rs  metrics.rs  relay.rs  state.rs  telemetry.rs
crates/rdg-server/src/handlers/: auth.rs  guacamole.rs  health.rs  mod.rs  rpch.rs  websocket.rs  webui.rs
crates/rdg-server/src/tui/: app.rs  mod.rs
crates/rdg-server/src/tui/ui/: acl.rs  dialogs.rs  groups.rs  mod.rs  sessions.rs  tabs.rs  tls.rs  users.rs
crates/rdg-server/tests/: integration_test.rs
crates/rdg-tui/: Cargo.toml
crates/rdg-tui/src/: app.rs  main.rs
crates/rdg-tui/src/ui/: acl.rs  dialogs.rs  groups.rs  mod.rs  sessions.rs  tabs.rs  users.rs
docs/: ARCHITECTURE.md
scripts/: start-aspire.ps1  start-guacd-podman.ps1  start-guacd.ps1
webui/: package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  types.ts
webui/src/components/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionGrid.tsx
webui/src/contexts/: AuthContext.tsx
webui/src/pages/: LoginPage.tsx  SessionPage.tsx
