[package]
name = "rdg-core"
version.workspace = true
edition.workspace = true

[features]
default = []
kerberos = ["cross-krb5"]

[dependencies]
rdg-proto = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
cross-krb5 = { workspace = true, optional = true }
