[package]
name = "rdg-server"
version.workspace = true
edition.workspace = true

[dependencies]
rdg-proto = { workspace = true }
rdg-core = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
