[package]
name = "rdg-server"
version.workspace = true
edition.workspace = true

[dependencies]
rdg-proto = { workspace = true }
rdg-core = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
md4 = { workspace = true }
netdev = "0.31"
futures = "0.3"
tokio-stream = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
