[package]
name = "rdg-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rdg-tui"
path = "src/main.rs"

[dependencies]
rdg-core = { path = "../rdg-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
md4 = { workspace = true }
toml = { workspace = true }
unicode-segmentation = "1"
